--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
 # Date:       Wed, Nov 13, 2013 19:12:50 PM
 # Version:    1.00
 
+2014/01/12 Jeffrey Fulmer <http://www.joedog.org/support/>
+ * view.BidDialog        Close frame on "New Game"
+ * view.GameView         Interface improvements
+
 2014/01/04 Jeffrey Fulmer <http://www.joedog.org/support/>
  * view.BidDialog        Force dialog toFront on focus lost
  * util.Setup            Install memory if has more lines 
